[package]
name = "hyper-util"
version = "0.1.9"
description = "hyper utilities"
readme = "README.md"
homepage = "https://hyper.rs"
documentation = "https://docs.rs/hyper-util"
repository = "https://github.com/hyperium/hyper-util"
license = "MIT"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
keywords = ["http", "hyper", "hyperium"]
categories = ["network-programming", "web-programming::http-client", "web-programming::http-server"]
edition = "2021"
rust-version = "1.63"

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

[dev-dependencies]
hyper = { version = "1.4.0", features = ["full"] }
bytes = "1"
http-body-util = "0.1.0"
tokio = { version = "1", features = ["macros", "test-util", "signal"] }
tokio-test = "0.4"
pretty_env_logger = "0.5"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dev-dependencies]
pnet_datalink = "0.35.0"

[features]
default = []

# Shorthand to enable everything
full = [
    "client",
    "client-legacy",
    "server",
    "server-auto",
    "server-graceful",
    "service",
    "http1",
    "http2",
    "tokio",
]

client = ["hyper/client", "dep:tracing", "dep:futures-channel", "dep:tower-service"]
client-legacy = ["client", "dep:socket2", "tokio/sync"]

server = ["hyper/server"]
server-auto = ["server", "http1", "http2"]
server-graceful = ["server", "tokio/sync", "futures-util/alloc"]

service = ["dep:tower-service"]

http1 = ["hyper/http1"]
http2 = ["hyper/http2"]

tokio = ["dep:tokio", "tokio/net", "tokio/rt", "tokio/time"]

# internal features used in CI
__internal_happy_eyeballs_tests = []

[[example]]
name = "client"
required-features = ["client-legacy", "http1", "tokio"]

[[example]]
name = "server"
required-features = ["server", "http1", "tokio"]

[[example]]
name = "server_graceful"
required-features = ["tokio", "server-graceful", "server-auto"]
